<resources>
    <string name="app_name">Sport Book</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="sign_in_text">Sign In</string>
    <string name="error_email_required_text">Email is required.</string>
    <string name="error_name_required_text">Name is required.</string>
    <string name="error_first_name_required_text">First name is required.</string>
    <string name="error_last_name_required_text">Last name is required.</string>
    <string name="error_phone_required_text">Phone is required.</string>
    <string name="error_phone_invalid_text">Your phone number format is invalid.</string>
    <string name="error_city_required_text">City is required.</string>
    <string name="error_district_required_text">District is required.</string>
    <string name="error_username_required_text">Username is required.</string>
    <string name="error_password_required_text">Password is required.</string>
    <string name="error_username_invalid_text">Username is email required.</string>
    <string name="error_password_invalid_text">Passwords must be at least %d characters.</string>
    <string name="error_login_failure_text">Login failure.</string>
    <string name="error_please_fill_in_required_information_text">Please fill in required information.</string>
    <string name="title_tournament">Tournament</string>
    <string name="title_mytournament">My Tournament</string>
    <string name="title_statistic">Statistic</string>
    <string name="title_profile">Profile</string>
    <string name="sportbook_title">Sportbook</string>
    <string name="forgot_password_text">forgot password</string>
    <string name="create_an_account_text">Create An Account</string>
    <string name="reset_password_text">Reset Password</string>
    <string name="error_password_mismatch_text">Password mistmatch!</string>
    <string name="error_signup_failure_text">Sign up failure.</string>
    <string name="icon_back">&#xf104;</string>
    <string name="icon_next">&#xf105;</string>
    <string name="icon_notification">&#xf0a2;</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="continue_text">Continue</string>
    <string name="name_text">Name</string>
    <string name="phone_number_text">Mobile *</string>
    <string name="address_text">Address</string>
    <string name="date_of_birth_text">Date of birth</string>
    <string name="club_text">Club</string>
    <string name="skill_set_description">Notice: Your level will be evaluated after your match in tournament.</string>
    <string name="pick_your_skill_level_text">Pick your skill level</string>
    <string name="submit_text">Submit</string>
    <string name="error_please_indicate_your_skill_level">Please indicate your skill level</string>
    <string name="error_your_payment_is_not_actived">My tournament can not be actived until your payment is confirmed. Please check with operation for more information</string>
    <string name="warning_title">Warning</string>
    <string name="first_name_text">First Name *</string>
    <string name="last_name_text">Last name *</string>
    <string name="city_text">City *</string>
    <string name="district_text">District *</string>
    <string name="title_select_the_city">Select the city</string>
    <string name="title_select_your_district">Select your district</string>
    <string name="title_competition_fee">Competition Fee</string>
    <string name="title_competition_mode">Competition Mode</string>
    <string name="title_competition_schedule">Competition Schedule</string>
    <string name="error_tournament_sign_up_failure">Tournament sign up with failure</string>
    <string name="payment_peding_text">PAYMENT PENDING</string>
    <string name="paid">PAID</string>
    <string name="check_confirm_email_text">We have sent you a confirmation email, please check your email</string>
    <string name="sign_up_with_the_failure">Sign up with the failure</string>
    <string name="time_block_9am_12am_text">9am-12am</string>
    <string name="time_block_1pm_4pm_text">1pm-4pm</string>
    <string name="time_block_5pm_9pm_text">5pm-9pm</string>
    <string name="error_unauthorized_text">Unauthorized, missing token in header</string>
    <string name="error_update_time_slot_failure_text">You are not in the team that can do this operation</string>
    <string name="error_missing_feild_text">One of require fields is missing</string>
    <string name="warning_update_timeslot_text">You have submited your prefered time and venue. This is one time submit soplease check carefully</string>
    <string name="ok_text">OK</string>
    <string name="wait_let_me_check_text">Wait, let me check</string>
    <string name="rank_your_venue_text">Rank your venue</string>
    <string name="input_your_time_range_text">Input your time range</string>
    <string name="error_you_must_at_least_pick_5_timeslots_text">You must at least pick 5 timeslots</string>
    <string name="opponents_list_text">Opponents list</string>
    <string name="title_opponent_list">Opponent List</string>
    <string name="round_text">Round:</string>
    <string name="accept_invitation_text">Accept Invitation</string>
    <string name="decline_and_pick_another_time_text">decline and pick another time</string>
    <string name="warning_invitation_expired_after_24_hours_text">This invitation will expired after 24 hours.\n You will be count as forfeit if you don’t respond</string>
    <string name="icon_warning_text">!</string>
</resources>
