<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:hint="@string/name_text"
            style="@style/styleEditText" />

        <EditText
            style="@style/styleEditText"
            android:hint="@string/email_text" />

        <EditText
            style="@style/styleEditText"
            android:hint="@string/phone_number_text" />

        <EditText
            style="@style/styleEditText"
            android:hint="@string/address_text" />

        <EditText
            style="@style/styleEditText"
            android:hint="@string/date_of_birth_text" />

        <EditText
            style="@style/styleEditText"
            android:hint="@string/club_text" />

        <Button
            android:id="@+id/btnSignUpPersonalContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:text="@string/continue_text" />
    </LinearLayout>
</ScrollView>